// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SystemMessage error basic 1`] = `
<div
  className="jsx-1475698917"
>
  <span
    className="jsx-3356670990"
  >
    Type your message here
  </span>
</div>
`;

exports[`Storyshots SystemMessage error with icon 1`] = `
<div
  className="jsx-3543310177"
>
  <span
    className="jsx-2399753088"
  >
    <svg
      fill="#d21c1c"
      height="20px"
      viewBox="0 0 32 32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M17.2 17.2h-2.4V10h2.4v7.2zm0 4.8h-2.4v-2.4h2.4V22zM16 4C9.373 4 4 9.373 4 16A12 12 0 1 0 16 4z"
      />
    </svg>
  </span>
  <span
    className="jsx-3356670990"
  >
    Type your message here
  </span>
</div>
`;

exports[`Storyshots SystemMessage error with title 1`] = `
<div
  className="jsx-1475698917"
>
  <h4
    className="jsx-3861500783"
  >
    Title
  </h4>
  <span
    className="jsx-3356670990"
  >
    Type your message here
  </span>
</div>
`;

exports[`Storyshots SystemMessage error with title and  icon 1`] = `
<div
  className="jsx-3543310177"
>
  <span
    className="jsx-2399753088"
  >
    <svg
      fill="#d21c1c"
      height="20px"
      viewBox="0 0 32 32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M17.2 17.2h-2.4V10h2.4v7.2zm0 4.8h-2.4v-2.4h2.4V22zM16 4C9.373 4 4 9.373 4 16A12 12 0 1 0 16 4z"
      />
    </svg>
  </span>
  <h4
    className="jsx-3861500783"
  >
    Title
  </h4>
  <span
    className="jsx-3356670990"
  >
    Type your message here
  </span>
</div>
`;

exports[`Storyshots SystemMessage info basic 1`] = `
<div
  className="jsx-3633742151"
>
  <span
    className="jsx-2657584504"
  >
    Type your message here
  </span>
</div>
`;

exports[`Storyshots SystemMessage info with icon 1`] = `
<div
  className="jsx-2937561027"
>
  <span
    className="jsx-2399753088"
  >
    <svg
      fill="#10709f"
      height="20px"
      viewBox="0 0 32 32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14.8 12.4h2.4V10h-2.4v2.4zM16 25.6c-5.292 0-9.6-4.308-9.6-9.6s4.308-9.6 9.6-9.6 9.6 4.308 9.6 9.6-4.308 9.6-9.6 9.6zM16 4C9.373 4 4 9.373 4 16A12 12 0 1 0 16 4zm-1.2 18h2.4v-7.2h-2.4V22z"
      />
    </svg>
  </span>
  <span
    className="jsx-2657584504"
  >
    Type your message here
  </span>
</div>
`;

exports[`Storyshots SystemMessage info with title and  icon 1`] = `
<div
  className="jsx-2937561027"
>
  <span
    className="jsx-2399753088"
  >
    <svg
      fill="#10709f"
      height="20px"
      viewBox="0 0 32 32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14.8 12.4h2.4V10h-2.4v2.4zM16 25.6c-5.292 0-9.6-4.308-9.6-9.6s4.308-9.6 9.6-9.6 9.6 4.308 9.6 9.6-4.308 9.6-9.6 9.6zM16 4C9.373 4 4 9.373 4 16A12 12 0 1 0 16 4zm-1.2 18h2.4v-7.2h-2.4V22z"
      />
    </svg>
  </span>
  <h4
    className="jsx-3436964697"
  >
    Title
  </h4>
  <span
    className="jsx-2657584504"
  >
    Type your message here
  </span>
</div>
`;

exports[`Storyshots SystemMessage success basic 1`] = `
<div
  className="jsx-2991289112"
>
  <span
    className="jsx-3915919481"
  >
    Type your message here
  </span>
</div>
`;

exports[`Storyshots SystemMessage success with icon 1`] = `
<div
  className="jsx-2338436252"
>
  <span
    className="jsx-2399753088"
  >
    <svg
      fill="#127f22"
      height="20px"
      viewBox="0 0 32 32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M28 8.934L11.543 25.39 4 17.848l1.934-1.934 5.609 5.596L26.066 7z"
      />
    </svg>
  </span>
  <span
    className="jsx-3915919481"
  >
    Type your message here
  </span>
</div>
`;

exports[`Storyshots SystemMessage success with title and  icon 1`] = `
<div
  className="jsx-2338436252"
>
  <span
    className="jsx-2399753088"
  >
    <svg
      fill="#127f22"
      height="20px"
      viewBox="0 0 32 32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M28 8.934L11.543 25.39 4 17.848l1.934-1.934 5.609 5.596L26.066 7z"
      />
    </svg>
  </span>
  <h4
    className="jsx-1426517912"
  >
    Title
  </h4>
  <span
    className="jsx-3915919481"
  >
    Type your message here
  </span>
</div>
`;

exports[`Storyshots SystemMessage warning basic 1`] = `
<div
  className="jsx-244149079"
>
  <span
    className="jsx-1932761937"
  >
    Type your message here
  </span>
</div>
`;

exports[`Storyshots SystemMessage warning with icon 1`] = `
<div
  className="jsx-2951260371"
>
  <span
    className="jsx-2399753088"
  >
    <svg
      fill="#f9971e"
      height="20px"
      viewBox="0 0 32 32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M17.09 18.09h-2.18v-4.363h2.18v4.364zm0 4.365h-2.18v-2.182h2.18v2.182zM4 25.727h24L16 5 4 25.727z"
      />
    </svg>
  </span>
  <span
    className="jsx-1932761937"
  >
    Type your message here
  </span>
</div>
`;

exports[`Storyshots SystemMessage warning with title and  icon 1`] = `
<div
  className="jsx-2951260371"
>
  <span
    className="jsx-2399753088"
  >
    <svg
      fill="#f9971e"
      height="20px"
      viewBox="0 0 32 32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M17.09 18.09h-2.18v-4.363h2.18v4.364zm0 4.365h-2.18v-2.182h2.18v2.182zM4 25.727h24L16 5 4 25.727z"
      />
    </svg>
  </span>
  <h4
    className="jsx-384181360"
  >
    Title
  </h4>
  <span
    className="jsx-1932761937"
  >
    Type your message here
  </span>
</div>
`;
